# Chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  chatbot_ml_project.py  deploy.ps1  docker-compose.dev.yaml  mlflow_config.py  requirements-ci.txt  requirements-dev.txt  requirements.txt
chatbot-ml-nlp/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
chatbot-ml-nlp/.github/: pull_request_template.md
chatbot-ml-nlp/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
chatbot-ml-nlp/.github/workflows/: ci.yml  deploy.yml  release.yml
chatbot-ml-nlp/config/: config.py  logging.yaml  prometheus.yml
chatbot-ml-nlp/data/kb/: faq.jsonl  product_info.jsonl  technical_docs.jsonl
chatbot-ml-nlp/deployment/compose/: docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
chatbot-ml-nlp/deployment/docker/: .dockerignore  Dockerfile  Dockerfile.dev
chatbot-ml-nlp/deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
chatbot-ml-nlp/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
chatbot-ml-nlp/monitoring/: __init__.py  drift_check.py  logging_config.py  metrics_collector.py
chatbot-ml-nlp/scripts/: build_kb_index.py  canary_check.sh  data_preprocessing.py  download_models.py  export_model.py
chatbot-ml-nlp/src/: __init__.py  desktop_app.py  main.py  streamlit_app.py
chatbot-ml-nlp/src/nlp/: __init__.py  (+3 more)
chatbot-ml-nlp/tests/: conftest.py
(+99 files in other folders)
